# proyecto_plataformas

./: Hola.txt  README.md  add_lines  add_lines.c  balance.csv  balance_total  balance_total.c  balances  balances.c  contarlineas.c  deposito.c  facturas.c  fecha.c  hhh.c  info.csv  ingreso2.c  main  main (copy).c  main.c  movimientos.c  proyecto_final.c  prueba.c
entregable/: CMakeCache.txt  CMakeLists.txt  README  archivo.h  balance.csv  cajero  funciones.c  funciones2.c  info.csv  main.c
entregable/include/: archivo.h
entregable/src/: funciones.c  funciones2.c  funciones3.c  main.c  menu.c
